--- a/docroot/themes/custom/alshaya_hnm/sass/components/contact/_contact.scss
+++ b/docroot/themes/custom/alshaya_hnm/sass/components/contact/_contact.scss
@@ -217,6 +217,10 @@
   .form-item {
     margin-bottom: 2.5rem;
     display: inline-block;
+
+    &.mobile-number-field {
+      margin-bottom: 3.5rem;
+    }
   }
 
   fieldset {
@@ -252,12 +256,25 @@
     }
   }
 
+  .field--type-mobile-number {
+    clear: both;
+
+    .mobile-number-field {
+      display: inline-block;
+      margin-top: 21px;
+
+      .form-type-select {
+        margin-top: 0;
+      }
+    }
+  }
+
   .form-actions {
     @include breakpoint($desktop) {
-      margin-top: 0.8rem;
+      margin-top: 2rem;
     }
 
-    @include breakpoint($tablet) {
+    @include breakpoint($only-tablet) {
       margin-top: 1rem;
     }
 
