--- a/docroot/themes/custom/alshaya_hnm/sass/components/user/_users-contact.scss
+++ b/docroot/themes/custom/alshaya_hnm/sass/components/user/_users-contact.scss
@@ -43,6 +43,7 @@
     float: $left;
     max-width: 11.7rem;
     width: calc(50% - 12px);
+    margin-top: 2.125rem;
 
     input {
       margin-top: 0.5rem;
